--- a/_data/projects/e_kaboooom.yml
+++ b/_data/projects/e_kaboooom.yml
@@ -1,6 +1,7 @@
 title: Kaboooom !
 description: An open world action game, where the player takes control of cars and destroys everything in their path.
 short-description: An open world action game, where the player takes control of cars and destroys everything in their path.
+very-short-description: An open world action game, where the player takes control of cars and destroys everything in their path.
 sd-no-sound-video:
 thumbnail: "/assets/images/kaboooom/kaboooom_screen_2.png"
 featured: false
