--- a/_data/projects/f_elephantgame.yml
+++ b/_data/projects/f_elephantgame.yml
@@ -1,6 +1,7 @@
 title: Elephant Game
 description: Runner game in which you have to rescue animals from a volcano eruption.
 short-description: Runner game in which you have to rescue animals from a volcano eruption.
+very-short-description: Runner game in which you have to rescue animals from a volcano eruption.
 sd-no-sound-video:
 thumbnail: "/assets/images/elephant_game/elephant-game-logo.png"
 featured: false
