--- a/_data/projects/g_create_life.yml
+++ b/_data/projects/g_create_life.yml
@@ -1,6 +1,7 @@
 title: Create Life 
 description: Puzzle game in which you must create life ecosystems.
 short-description: Puzzle game in which you must create life ecosystems.
+very-short-description: Puzzle game in which you must create life ecosystems.
 sd-no-sound-video:
 thumbnail: "/assets/images/create_life/create_life_logo_long.jpg"
 featured: false
