--- a/_data/engineering-projects/c_deca_compiler.yml
+++ b/_data/engineering-projects/c_deca_compiler.yml
@@ -1,7 +1,7 @@
 title: Deca Compiler 
-description: Two spaceships on the run! <b>You can only take 45° turns</b>, scrolling at lightspeed in the winding corridors of a gigantic spaceship. 
-             Will you take the risk of going faster, or will you let your opponent outrun you?
-short-description: Frantic 2-player race in space with 45° turns only.
+description: Deca Compiler written in Java.
+short-description: Deca Compiler written in Java.
+very-short-description: Deca Compiler written in Java.
 sd-no-sound-video: "/assets/images/45_degrees/45_degrees_trailer.mp4"
 thumbnail: "/assets/images/45_degrees/45_degrees_screen_1.png"
 structure-logo: "/assets/images/logos/cnam-enjmin-black-logo.png"
