--- a/_data/projects/b_45.yml
+++ b/_data/projects/b_45.yml
@@ -2,6 +2,7 @@ title: 45°
 description: Two spaceships on the run! <b>You can only take 45° turns</b>, scrolling at lightspeed in the winding corridors of a gigantic spaceship. 
              Will you take the risk of going faster, or will you let your opponent outrun you?
 short-description: Frantic 2-player race in space with 45° turns only.
+very-short-description: 2-player race in space with 45° turns only.
 sd-no-sound-video: "/assets/images/45_degrees/45_degrees_trailer.mp4"
 thumbnail: "/assets/images/45_degrees/45_degrees_screen_1.png"
 structure-logo: "/assets/images/logos/cnam-enjmin-black-logo.png"
