--- a/_data/projects/c_xdefiant.yml
+++ b/_data/projects/c_xdefiant.yml
@@ -3,6 +3,7 @@ description: Tom Clancy's XDefiant is a <b>free-to-play</b>, <b>fast-paced arena
           with personalized loadouts and specialized factions,
           as teams of gunfighters – called Defiants – battle for domination.
 short-description: Free-to-play fast-paced arena shooter made by Ubisoft. 
+very-short-description: Free-to-play fast-paced arena shooter made by Ubisoft. 
 sd-no-sound-video: "/assets/images/xdefiant/xdefiant_gameplay.mp4"
 thumbnail: "/assets/images/xdefiant/xdefiant_thumbnail.jpg"
 structure-logo: "/assets/images/logos/Ubisoft-logo.svg"
