--- a/_data/projects/d_soclean.yml
+++ b/_data/projects/d_soclean.yml
@@ -1,6 +1,7 @@
 title: So Clean
 description: Cooperate with 4 players to keep the street clean!
 short-description: 4-players coop game.
+very-short-description: 4-players coop game.
 sd-no-sound-video: "/assets/images/xdefiant/xdefiant_gameplay.mp4"
 thumbnail: "/assets/images/so_clean/so_clean_screen_3.png"
 featured: false
