--- a/_data/projects/i_life_of_pea.yml
+++ b/_data/projects/i_life_of_pea.yml
@@ -1,6 +1,7 @@
 title: Life of Pea
 description: Little party game where you race to the top of a giant bean plant.
 short-description: Little party game where you race to the top of a giant bean plant.
+very-short-description: Little party game where you race to the top of a giant bean plant.
 sd-no-sound-video:
 thumbnail: "/assets/images/life-of-pea/life-of-pea-screen-2.png"
 featured: false
