--- a/_data/projects/b_45.yml
+++ b/_data/projects/b_45.yml
@@ -6,6 +6,7 @@ very-short-description: 2-player race in space with 45° turns only.
 sd-no-sound-video: "/assets/images/45_degrees/45_degrees_trailer.mp4"
 thumbnail: "/assets/images/45_degrees/45_degrees_screen_1.png"
 structure-logo: "/assets/images/logos/cnam-enjmin-black-logo.png"
+dedicated-page: "/projects/45-degrees"
 year: 2021
 featured: true
 hidden: false
