--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@
 title: Amaury Butaux 
 email: "amaury.butaux@outlook.fr"
 description: >- # this means to ignore newlines until "baseurl:"
-  A Bootstrap 4 start up project for Jekyll and Github Pages
+  Amaury Butaux website
 #baseurl: "" # the subpath of your site, e.g. /blog
 #url: "" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: Ymarua
