--- a/_data/projects/f_elephantgame.yml
+++ b/_data/projects/f_elephantgame.yml
@@ -5,7 +5,7 @@ very-short-description: Runner game in which you have to rescue animals from a v
 sd-no-sound-video:
 thumbnail: "/assets/images/elephant_game/elephant-game-logo.png"
 featured: false
-hidden: false
+hidden: true
 year: 2019
 badges:
   -
