Updated xdefiant, 45 and home page

--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,8 @@
 title: Amaury Butaux 
 email: "amaury.butaux@outlook.fr"
 description: >- # this means to ignore newlines until "baseurl:"
-  Amaury Butaux website
+  Junior game designer looking for a 6 months internship
+  from march 2023.
 #baseurl: "" # the subpath of your site, e.g. /blog
 #url: "" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: Ymarua
