--- a/_data/projects/a_fired_up.yml
+++ b/_data/projects/a_fired_up.yml
@@ -1,7 +1,7 @@
 title: Fired Up!
 description: A <b>4 player co-op couch game</b> where you use whatever you find in the house to save it from the flames.
 short-description: <b>4 player co-op couch game</b> about trainee firefighting animals.
-very-short-description: <b>4 player co-op couch game</b>
+very-short-description: 4 player co-op couch game
 sd-no-sound-video: "/assets/images/fired_up/Fired_Up_Trailer-SD_Sound.mp4"
 thumbnail: "/assets/images/fired_up/fired_up_screen_2.png"
 structure-logo: "/assets/images/logos/cnam-enjmin-black-logo.png"
