--- a/_data/badges.yml
+++ b/_data/badges.yml
@@ -4,6 +4,9 @@
 3months:
   title: 3 months
   style: badge-info
+4months:
+  title: 4 months
+  style: badge-info
 6months:
   title: 6 months
   style: badge-info
@@ -26,6 +29,9 @@
 9developers:
   title: 9 developers
   style: badge-info
+10developers:
+  title: 10 developers
+  style: badge-info
 Internship:
   title: Internship
   style: badge-danger
@@ -46,3 +52,6 @@ Engineer:
 GameJam:
   title: Game Jam
   style: badge-info
+wip:
+  title: Work In Progress
+  style: badge-danger
