--- a/_data/projects/a_fired_up.yml
+++ b/_data/projects/a_fired_up.yml
@@ -10,7 +10,7 @@ year: 2022
 featured: true
 hidden: false
 genre: Couch-Co-op
-tools: Unity, Probuilder, Progrid, Notion, Google Slides
+tools: Unity, Probuilder, Notion, Google Slides
 download-page: https://spaceconcombre.itch.io/firedup
 download-button: Download on itch.io
 badges:
