--- a/_data/projects/a_fired_up.yml
+++ b/_data/projects/a_fired_up.yml
@@ -5,6 +5,7 @@ very-short-description: 4 player co-op couch game
 sd-no-sound-video: "/assets/images/fired_up/Fired_Up_Trailer-SD_Sound.mp4"
 thumbnail: "/assets/images/fired_up/fired_up_screen_2.png"
 structure-logo: "/assets/images/logos/cnam-enjmin-black-logo.png"
+award-logo: "/assets/images/fired_up/awards/BostonFIG_Fest_2022_Award_300px.png"
 dedicated-page: "/projects/fired-up"
 year: 2022
 featured: true
