finished v1 of spike portfolio page

--- a/_data/badges.yml
+++ b/_data/badges.yml
@@ -42,6 +42,9 @@ GD:
 LD:
   title: Level Designer
   style: badge-secondary
+CD:
+  title: Combat Designer
+  style: badge-secondary
 GPP:
   title: Gameplay Programmer
   style: badge-success
