--- a/_data/projects/a_a_spike.yml
+++ b/_data/projects/a_a_spike.yml
@@ -2,8 +2,9 @@ title: Spike
 description: An action/adventure game about <b>a hedgehog using their own spikes as a weapon</b>.
 short-description: An action/adventure game about <b>a hedgehog using their own spikes as a weapon</b>.
 very-short-description: An action/adventure game about <b>a hedgehog using their own spikes as a weapon</b>.
-sd-no-sound-video: "/assets/images/spike/spike-gameplay-footage-sd-sound.mp4"
-thumbnail: "/assets/images/spike/spike_screen_04.png"
+sd-no-sound-video: "/assets/images/spike/spike-gameplay-footage-sd-sound.webm"
+thumbnail: "/assets/images/spike/spike_screen_04_thumbnail.webp"
+big-thumbnail: "/assets/images/spike/spike_screen_thumbnail.webp"
 structure-logo: "/assets/images/logos/cnam-enjmin-black-logo.webp"
 structure-logo-alt: Cnam-Enjmin
 dedicated-page: "/projects/spike"
