--- a/_data/projects/b_45.yml
+++ b/_data/projects/b_45.yml
@@ -4,7 +4,8 @@ description: Two spaceships on the run! <b>You can only take 45° turns</b>, scr
 short-description: Frantic 2-player race in space with 45° turns only.
 very-short-description: 2-player race in space with 45° turns only.
 sd-no-sound-video: "/assets/images/45_degrees/45_degrees_trailer.mp4"
-thumbnail: "/assets/images/45_degrees/45_degrees_screen_1.png"
+thumbnail: "/assets/images/45_degrees/45_degrees_screen_1_thumbnail.webp"
+big-thumbnail: "/assets/images/45_degrees/45_degrees_screen_1_thumbnail.webp"
 structure-logo: "/assets/images/logos/cnam-enjmin-black-logo.webp"
 dedicated-page: "/projects/45-degrees"
 year: 2021
