--- a/_config.yml
+++ b/_config.yml
@@ -16,8 +16,7 @@
 title: Amaury Butaux 
 email: "amaury.butaux@outlook.fr"
 description: >- # this means to ignore newlines until "baseurl:"
-  Junior game designer looking for a 6 months internship
-  from march 2023.
+  Junior Game Designer
 #baseurl: "" # the subpath of your site, e.g. /blog
 #url: "" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: Ymarua
