--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -13,6 +13,7 @@ on:
 jobs:
   jekyll:
     runs-on: ubuntu-latest
+    environment: github-pages
     steps:
       - name: 📂 setup
         uses: actions/checkout@v3
