workflow is now functional, adding some parameters to upload-pages-artifact action

--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -91,6 +91,8 @@ jobs:
         with:
           # upload entire directory
           path: './_site'
+          name: github-pages
+          retention-days: 1
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v2
