--- a/_i18n/en.yml
+++ b/_i18n/en.yml
@@ -4,3 +4,8 @@ languages:
 pages:
   home: Home
   legal: Legal
+nav:
+  resume: CV
+titles:
+  juniorgamedesigner: Junior Game Designer
+  games: Games
