--- a/_i18n/fr.yml
+++ b/_i18n/fr.yml
@@ -7,5 +7,7 @@ pages:
 nav:
   resume: CV
 titles:
-  juniorgamedesigner: Game Designer Junior
+  current-role: Game Designer
   games: Jeux
+
+project-page: Voir le projet
