--- a/_i18n/en.yml
+++ b/_i18n/en.yml
@@ -7,5 +7,7 @@ pages:
 nav:
   resume: CV
 titles:
-  juniorgamedesigner: Junior Game Designer
+  current-role: Game Designer
   games: Games
+
+project-page: Project Page
